UMUS 1188 AmAuthors Personality  - added min-height to widgetWindow to prevent jumping on question change

--- a/umus/1188/modules/vhm/widgets/css/colorschemes/umus_1188_amauthors_personality.css
+++ b/umus/1188/modules/vhm/widgets/css/colorschemes/umus_1188_amauthors_personality.css
@@ -457,6 +457,7 @@ body {
 }
 .widgetWindow {
 	padding-bottom: 280px;
+	min-height: 173px;
 }
 }
 @media only screen and (min-width:628px) {
@@ -465,6 +466,7 @@ body {
 }
 .widgetWindow {
 	padding-bottom: 330px;
+	min-height: 203px;
 }
 .questionWindow .question {
 	margin: 0 0 10px;
